# questions-generator

./: pyproject.toml
src/: manage.py
src/questions_generator/: asgi.py  settings.py  urls.py  wsgi.py
