[project]
name = "questions-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "aintDatcap",email = "default.pentagon042@passinbox.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.4,<6.0.0)"
]

[tool.poetry]
packages = [{include = "questions_generator", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
